2002-04-13  Jon K Hellan  <hellan@acm.org>

	* src/gui-file.c: s/ENABLE_BONOBO/WITH_BONOBO/

	* src/gui-util.c: Ditto.

	* src/history.c: Ditto.

	* src/main.c: Ditto.

	* src/sheet.c: Ditto.

	* src/sheet-object.c: Ditto.

	* src/workbook-control-gui.c: Ditto.

	* src/workbook-format-toolbar.c: Ditto.

	* src/workbook-object-toolbar.c: 

	* src/workbook.c: Ditto.

	* src/workbook-private.c: Ditto.

	* src/xml-io.c: Ditto.

2002-04-13  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* schemas/gnumeric-general.schemas : add 2 undo preference settings
	* src/commands.c : add sheet name to descriptors depending on
	  preference setting
	* src/commands.h : add cmd_range_list_to_string_utility and
	  cmd_cell_pos_name_utility
	* src/gnumeric-gconf.h : new file, gather gconf paths in a single 
	  includable place

2002-04-12  Jody Goldberg <jody@gnome.org>

	* src/workbook-private.c :  move the really broken bonobo stuff here.

	* src/sheet-control-gui.c (scg_object_update_bbox) : Use fabs to
	  handle inversion.
	(scg_mode_edit_object) : Be a touch more anal.

	* src/style.c (get_substitute_font) : add more font mappings.

	* src/item-grid.c (ig_obj_create_finish) : no need to moneky with the
	  internals of scg.  Setting the mode clears the new object.  Setting
	  the sheet adds a ref, so there are no worries that it will go away.

	* src/gnumeric-canvas.c : rip out the drag and drop support.
	* src/workbook-control-gui.c : move it here.
	(cb_insert_image) : silence a warning.
	(cb_edit_cut) : at least make the object deletetion undoable.
	(workbook_close_if_user_permits) : reorder to conform to HIG.

2002-04-08  Jody Goldberg <jody@gnome.org>

	* src/sheet-control-gui.c (scg_object_stop_editing) : unref the
	  current object.
	(scg_mode_edit_object) : ref the current object.

	* src/item-grid.c (ig_obj_create_finish) : Use
	  scg_mode_edit_object.
	* src/gnumeric-canvas.c (gnm_canvas_key_mode_object) : Use
	  sc_mode_edit to handle objects that are still being created.
